--- a/assets/css/outpouts.css
+++ b/assets/css/outpouts.css
@@ -12,8 +12,6 @@
     --color-orange-600: #FF4900;
     --color-yellow-400: #FFB822;
     --color-yellow-600: oklch(0.681 0.162 75.834);
-    --color-green-100: oklch(0.962 0.044 156.743);
-    --color-green-500: oklch(0.723 0.219 149.579);
     --color-pink-400: oklch(0.718 0.202 349.761);
     --color-pink-500: oklch(0.656 0.241 354.308);
     --color-slate-100: oklch(0.968 0.007 247.896);
@@ -27,11 +25,15 @@
     --color-stone-600: oklch(0.444 0.011 73.639);
     --color-stone-700: #3C3C3C;
     --color-stone-800: #242424;
+    --color-stone-900: oklch(0.216 0.006 56.043);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
     --container-2xl: 42rem;
     --container-3xl: 48rem;
+    --container-4xl: 56rem;
+    --container-5xl: 64rem;
+    --container-6xl: 72rem;
     --text-sm: 0.875rem;
     --text-sm--line-height: calc(1.25 / 0.875);
     --text-base: 1rem;
@@ -295,38 +297,11 @@
   .top-160 {
     top: calc(var(--spacing) * 160);
   }
-  .top-250 {
-    top: calc(var(--spacing) * 250);
-  }
-  .top-300 {
-    top: calc(var(--spacing) * 300);
-  }
   .top-340 {
     top: calc(var(--spacing) * 340);
   }
-  .top-350 {
-    top: calc(var(--spacing) * 350);
-  }
-  .top-400 {
-    top: calc(var(--spacing) * 400);
-  }
-  .top-450 {
-    top: calc(var(--spacing) * 450);
-  }
-  .top-470 {
-    top: calc(var(--spacing) * 470);
-  }
-  .top-480 {
-    top: calc(var(--spacing) * 480);
-  }
-  .top-490 {
-    top: calc(var(--spacing) * 490);
-  }
   .top-510 {
     top: calc(var(--spacing) * 510);
-  }
-  .top-610 {
-    top: calc(var(--spacing) * 610);
   }
   .top-640 {
     top: calc(var(--spacing) * 640);
@@ -334,32 +309,17 @@
   .top-780 {
     top: calc(var(--spacing) * 780);
   }
-  .top-5100 {
-    top: calc(var(--spacing) * 5100);
-  }
-  .top-7800 {
-    top: calc(var(--spacing) * 7800);
-  }
   .right-0 {
     right: calc(var(--spacing) * 0);
   }
   .right-50 {
     right: calc(var(--spacing) * 50);
   }
-  .right-80 {
-    right: calc(var(--spacing) * 80);
-  }
-  .right-90 {
-    right: calc(var(--spacing) * 90);
-  }
   .right-100 {
     right: calc(var(--spacing) * 100);
   }
   .right-120 {
     right: calc(var(--spacing) * 120);
-  }
-  .right-150 {
-    right: calc(var(--spacing) * 150);
   }
   .right-160 {
     right: calc(var(--spacing) * 160);
@@ -393,6 +353,9 @@
   }
   .col-auto {
     grid-column: auto;
+  }
+  .col-span-2 {
+    grid-column: span 2 / span 2;
   }
   .col-span-3 {
     grid-column: span 3 / span 3;
@@ -511,6 +474,9 @@
   .mt-1 {
     margin-top: calc(var(--spacing) * 1);
   }
+  .mt-2 {
+    margin-top: calc(var(--spacing) * 2);
+  }
   .mt-4 {
     margin-top: calc(var(--spacing) * 4);
   }
@@ -529,8 +495,14 @@
   .mt-16 {
     margin-top: calc(var(--spacing) * 16);
   }
+  .mr-1 {
+    margin-right: calc(var(--spacing) * 1);
+  }
   .mr-2 {
     margin-right: calc(var(--spacing) * 2);
+  }
+  .mr-4 {
+    margin-right: calc(var(--spacing) * 4);
   }
   .mr-5 {
     margin-right: calc(var(--spacing) * 5);
@@ -538,14 +510,26 @@
   .mr-6 {
     margin-right: calc(var(--spacing) * 6);
   }
+  .mb-1 {
+    margin-bottom: calc(var(--spacing) * 1);
+  }
+  .mb-2 {
+    margin-bottom: calc(var(--spacing) * 2);
+  }
   .mb-3 {
     margin-bottom: calc(var(--spacing) * 3);
   }
   .mb-4 {
     margin-bottom: calc(var(--spacing) * 4);
   }
+  .mb-6 {
+    margin-bottom: calc(var(--spacing) * 6);
+  }
   .mb-8 {
     margin-bottom: calc(var(--spacing) * 8);
+  }
+  .mb-12 {
+    margin-bottom: calc(var(--spacing) * 12);
   }
   .ml-2 {
     margin-left: calc(var(--spacing) * 2);
@@ -658,6 +642,9 @@
   .h-4\/5 {
     height: calc(4/5 * 100%);
   }
+  .h-5 {
+    height: calc(var(--spacing) * 5);
+  }
   .h-6 {
     height: calc(var(--spacing) * 6);
   }
@@ -670,6 +657,9 @@
   .h-16 {
     height: calc(var(--spacing) * 16);
   }
+  .h-64 {
+    height: calc(var(--spacing) * 64);
+  }
   .h-\[60\%\] {
     height: 60%;
   }
@@ -678,6 +668,9 @@
   }
   .h-\[400px\] {
     height: 400px;
+  }
+  .h-auto {
+    height: auto;
   }
   .h-full {
     height: 100%;
@@ -718,6 +711,9 @@
   .w-4\/5 {
     width: calc(4/5 * 100%);
   }
+  .w-5 {
+    width: calc(var(--spacing) * 5);
+  }
   .w-6 {
     width: calc(var(--spacing) * 6);
   }
@@ -753,6 +749,15 @@
   }
   .max-w-3xl {
     max-width: var(--container-3xl);
+  }
+  .max-w-4xl {
+    max-width: var(--container-4xl);
+  }
+  .max-w-5xl {
+    max-width: var(--container-5xl);
+  }
+  .max-w-6xl {
+    max-width: var(--container-6xl);
   }
   .max-w-none {
     max-width: none;
@@ -1156,14 +1161,27 @@
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
+  }
   .gap-4 {
     gap: calc(var(--spacing) * 4);
   }
   .gap-6 {
     gap: calc(var(--spacing) * 6);
   }
+  .gap-8 {
+    gap: calc(var(--spacing) * 8);
+  }
   .gap-12 {
     gap: calc(var(--spacing) * 12);
+  }
+  .space-y-2 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 2) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-y-reverse)));
+    }
   }
   .space-y-reverse {
     :where(& > :not(:last-child)) {
@@ -1444,18 +1462,6 @@
   .bg-gray-800 {
     background-color: var(--color-gray-800);
   }
-  .bg-green-100 {
-    background-color: var(--color-green-100);
-  }
-  .bg-green-500 {
-    background-color: var(--color-green-500);
-  }
-  .bg-orange-400 {
-    background-color: var(--color-orange-400);
-  }
-  .bg-orange-400\/20 {
-    background-color: color-mix(in oklab, var(--color-orange-400) 20%, transparent);
-  }
   .bg-orange-600 {
     background-color: var(--color-orange-600);
   }
@@ -1477,6 +1483,9 @@
   .bg-stone-600 {
     background-color: var(--color-stone-600);
   }
+  .bg-stone-600\/30 {
+    background-color: color-mix(in oklab, var(--color-stone-600) 30%, transparent);
+  }
   .bg-stone-600\/50 {
     background-color: color-mix(in oklab, var(--color-stone-600) 50%, transparent);
   }
@@ -1488,6 +1497,12 @@
   }
   .bg-stone-800 {
     background-color: var(--color-stone-800);
+  }
+  .bg-stone-800\/50 {
+    background-color: color-mix(in oklab, var(--color-stone-800) 50%, transparent);
+  }
+  .bg-stone-900 {
+    background-color: var(--color-stone-900);
   }
   .bg-yellow-400 {
     background-color: var(--color-yellow-400);
@@ -1537,6 +1552,14 @@
     --tw-gradient-from: var(--color-pink-500);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
+  .from-stone-800 {
+    --tw-gradient-from: var(--color-stone-800);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .from-stone-800\/50 {
+    --tw-gradient-from: color-mix(in oklab, var(--color-stone-800) 50%, transparent);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
   .from-30\% {
     --tw-gradient-from-position: 30%;
   }
@@ -1554,6 +1577,14 @@
   }
   .to-pink-500 {
     --tw-gradient-to: var(--color-pink-500);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-stone-700 {
+    --tw-gradient-to: var(--color-stone-700);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-stone-700\/50 {
+    --tw-gradient-to: color-mix(in oklab, var(--color-stone-700) 50%, transparent);
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
   .to-yellow-400 {
@@ -1735,6 +1766,9 @@
   .px-2 {
     padding-inline: calc(var(--spacing) * 2);
   }
+  .px-3 {
+    padding-inline: calc(var(--spacing) * 3);
+  }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
@@ -1794,6 +1828,9 @@
   }
   .pl-5 {
     padding-left: calc(var(--spacing) * 5);
+  }
+  .pl-6 {
+    padding-left: calc(var(--spacing) * 6);
   }
   .pl-16 {
     padding-left: calc(var(--spacing) * 16);
@@ -2498,6 +2535,13 @@
       }
     }
   }
+  .hover\:bg-stone-600 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-stone-600);
+      }
+    }
+  }
   .hover\:bg-stone-600\/50 {
     &:hover {
       @media (hover: hover) {
@@ -2557,6 +2601,20 @@
       }
     }
   }
+  .hover\:text-yellow-400 {
+    &:hover {
+      @media (hover: hover) {
+        color: var(--color-yellow-400);
+      }
+    }
+  }
+  .hover\:opacity-75 {
+    &:hover {
+      @media (hover: hover) {
+        opacity: 75%;
+      }
+    }
+  }
   .hover\:opacity-100 {
     &:hover {
       @media (hover: hover) {
@@ -2603,6 +2661,11 @@
       grid-column: span 7 / span 7;
     }
   }
+  .md\:mb-6 {
+    @media (width >= 48rem) {
+      margin-bottom: calc(var(--spacing) * 6);
+    }
+  }
   .md\:mb-12 {
     @media (width >= 48rem) {
       margin-bottom: calc(var(--spacing) * 12);
@@ -2641,6 +2704,11 @@
   .md\:max-w-2xl {
     @media (width >= 48rem) {
       max-width: var(--container-2xl);
+    }
+  }
+  .md\:grid-cols-2 {
+    @media (width >= 48rem) {
+      grid-template-columns: repeat(2, minmax(0, 1fr));
     }
   }
   .md\:grid-cols-3 {
@@ -2703,6 +2771,11 @@
       line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
+  .lg\:col-span-2 {
+    @media (width >= 64rem) {
+      grid-column: span 2 / span 2;
+    }
+  }
   .lg\:mt-0 {
     @media (width >= 64rem) {
       margin-top: calc(var(--spacing) * 0);
@@ -2711,6 +2784,11 @@
   .lg\:mb-5 {
     @media (width >= 64rem) {
       margin-bottom: calc(var(--spacing) * 5);
+    }
+  }
+  .lg\:grid-cols-3 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
   .lg\:text-xl {
